<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/edtexts"
        android:layout_width="318dp"
        android:layout_height="301dp"
        android:layout_marginTop="196dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp">

            <EditText
                android:id="@+id/et1"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#CCD1D9"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/plogin_username"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et2"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginBottom="20dp"
                android:backgroundTint="#CCD1D9"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/plogin_password"
                android:inputType="textPassword"
                app:passwordToggleTint="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp">

            <EditText
                android:id="@+id/et3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="left"
                android:layout_marginBottom="24dp"
                android:backgroundTint="#CCD1D9"
                android:cursorVisible="true"
                android:ems="10"
                android:hint="@string/plogin_host"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:textColor="@color/white"
            android:background="@drawable/button_login"
            android:text="@string/plogin_button_login" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="138dp"
        android:layout_height="122dp"
        app:layout_constraintBottom_toTopOf="@+id/edtexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.756"
        app:srcCompat="@drawable/phebee" />

</androidx.constraintlayout.widget.ConstraintLayout>